# mgame

./: .vimrc  CMakeLists.txt  LICENSE  clang.txt  readme.txt
alco/: CMakeLists.txt  alco.cpp  alco.hpp  lws.cpp  lws.hpp  main.hpp  utils.hpp
alco/binance/: CMakeLists.txt  binance.cpp  config.cpp  config.hpp  parse.cpp
alco/bitfinex/: CMakeLists.txt  bitfinex.cpp  config.cpp  config.hpp  parse.cpp  parse.hpp  readme.txt
alco/bitmex/: .parse.cpp.swp  CMakeLists.txt  bitmex.cpp  config.cpp  config.hpp  parse.cpp
alco/bybit/: CMakeLists.txt  bybit.cpp  config.cpp  config.hpp  parse.cpp
alco/coinbase/: CMakeLists.txt  coinbase.cpp  config.cpp  config.hpp  parse.cpp
alco/crypto.com/: .parse.cpp.swp  CMakeLists.txt  config.cpp  config.hpp  crypto.com.cpp  parse.cpp
alco/huobi/: .huobi.cpp.swp  CMakeLists.txt  config.cpp  config.hpp  huobi.cpp  parse.cpp  utils.hpp
alco/kraken/: CMakeLists.txt  config.cpp  config.hpp  kraken.cpp  parse.cpp
alco/plaza2/: CMakeLists.txt  cgate.h  config.cpp  config.hpp  parser.cpp  plaza.cpp  plaza.scheme  plaza_common.hpp  plaza_templater.cpp  readme.txt
alco/plaza2/scheme/: instruments.ini  instruments.inl  orders.ini  orders.inl  trades.ini  trades.inl
configs/: binance.conf  bitfinex.conf  bitmex.conf  bybit.conf  coinbase.conf  crypto.com.conf  huobi.conf  kraken.conf  makoa_server.conf  pip.conf  plaza.conf  plaza2_recv.trace.ini  plaza_recv.ini
evie/: CMakeLists.txt  algorithm.hpp  array.hpp  assert.hpp  atomic.hpp  cond_stream.hpp  config.cpp  config.hpp  curl.hpp  cvt.cpp  cvt.hpp  decimal.cpp  decimal.hpp  exception.hpp  fast_alloc.hpp  fmap.hpp  fset.hpp  initializer_list.hpp  iterator.hpp  lexical_cast.hpp  limits.hpp  list.hpp  log.cpp  log.hpp  math.cpp  math.hpp  mfile.cpp  mfile.hpp  mlog.cpp  mlog.hpp  mstring.cpp  mstring.hpp  mtime.hpp  mutex.hpp  myitoa.cpp  myitoa.hpp  mysql.hpp  new.hpp  optional.hpp  pair.hpp  (+32 more)
golang/mgo/: messages.go  socket_client.go
makoa/: CMakeLists.txt  config.cpp  config.hpp  dlfcn.hpp  engine.cpp  engine.hpp  exports.cpp  exports.hpp  imports.cpp  imports.hpp  makoa.cpp  messages.hpp  messages_t.hpp  mmap.cpp  mmap.hpp  order_b.hpp  order_book.hpp  readme.txt  securities.cpp  securities.hpp  server.cpp  server.hpp  signals.hpp  tags  types.hpp
tests/: make_one.lua  make_zero.lua  readme.txt
tests/one/: alco_one.conf
tests/zero/: alco_zero.conf
tyra/: CMakeLists.txt  readme.txt  tyra.cpp  tyra.hpp
viktor/: CMakeLists.txt  efile.cpp  estat.cpp  ifile.cpp  mysql.cpp  pip.cpp  pip.txt  readme.txt  stat_ticker.cpp  utils.cpp  viktor.cpp  viktor.hpp
ying/: CMakeLists.txt  mirror.cpp  mirror.hpp  ncurses.hpp  readme.txt  ying.cpp
